add now_streaming and fix some features

--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@
     @apply text-gray-200 text-xl font-bold;
 }
 
-/* .glass-bg{
-    From https://css.glass 
+.glass-bg{
+    /* From https://css.glass  */
 background: rgba(255, 255, 255, 0.2);
 border-radius: 16px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -24,7 +24,7 @@ backdrop-filter: blur(1.6px);
 -webkit-backdrop-filter: blur(1.6px);
 border: 1px solid rgba(255, 255, 255, 0.23);
 
-} */
+}
 
 body{
     background-color: #001219;
